remove combined user config built, move integration files to assets
